--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header, footer {
     background-color: #19B5AB;
 }
 h1,h2 {
-    text-align: justify;
+    text-align: ;
 }
 p {
     text-align: justify;
