--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+body {
+    background-color: #44C9EB;
+}
 header, footer {
     background-color: #19B5AB;
 }
-body {
-    background-color: #44C9EB;
+#imagemprincipal {
+    width: 100%
+    height: 300 px
+    border: 2px solid black
+    
 }
 
 h1,h2 {
