--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ header, footer {
     background-color: #19B5AB;
 }
 #imagemprincipal {
-    width: 100%
-    height: 300 px
-    border: 2px solid black
-    
+    width: 100%;
+    height: 300 px;
+    border: 2px solid black;
+    margin: 20px;
+    padding: 20px;
+
 }
 
 h1,h2 {
