--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ h1, strong {
 h1,h2 {
     text-align: center;
 }
-#Figura {
-    font-size: 10px;
+Figura {
+    font-size: 5px;
 }
 p {
     text-align: justify;
