--- a/style.css
+++ b/style.css
@@ -22,9 +22,12 @@ h1, strong {
 h1, h2 {
     text-align: center;
 }
-.class figura {
-    color:blue;
-    font-size: 5px;
+.paragrafos  {
+    background-color: darksalmon;
+    font-size: 25px;
+    border: 2px;
+    padding: 10px;
+    margin: 15px;
 }
 p {
     text-align: justify;
