--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1, h2 {
 .paragrafos  {
     background-color: darksalmon;
     font-size: 25px;
-    border: 2px;
+    border: 2px solid black
     padding: 10px;
     margin: 15px;
 }
