--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ h1, h2 {
 }
 .paragrafos  {
     background-color: darksalmon;
-    font-size: 25px;
-    border: 2px solid black
+    font-size: 20px;
+    border: 2px solid black;
     padding: 10px;
     margin: 15px;
 }
