--- a/style.css
+++ b/style.css
@@ -29,8 +29,17 @@ h1, h2 {
     padding: 10px;
     margin: 15px;
 }
+#am1.5 {
+    width: 93%;
+    height: 300 px;
+    border: 2px solid black;
+    margin: 20px;
+    padding: 5px;
+
+}
 p {
     text-align: justify;
     text-align-last: initial;
 }
 
+ 
