--- a/style.css
+++ b/style.css
@@ -51,12 +51,9 @@ p {
     font-size: larger;
 }
 
-
-/* não funcionou 
-<ul> {
+ul {
     display: inline-block;
     vertical-align: top;
     width: 20%;
     margin-right: 15%;
    }
-*/ 
