--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Usamos seletor, usamos uma referência da tag, todos que estiverem com aquela tag receberá a formatação*/
 h1 {
-    /*pode adicionar cor: escrevendo p nome em inglês, hexadecimal ou RGB*/
+    /*pode adicionar cor: escrevendo o nome em inglês, hexadecimal ou RGB*/
     color: rgb(#4f4723);
     /*Alinha texto ao centro*/
     text-align: center;
