--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1 {
     /*pode adicionar cor: escrevendo o nome em inglês, hexadecimal ou RGB*/
     color: #50471e;
     /*Alinha texto ao centro*/
-    text-align: center;
+    text-align: left;
     font-size: 30px;
 }
 /*a tag <body> contempla toda a página, podemos utilizar ela como sinalizador*/
