--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 }
 /*poderíamos usar usar o sinalisador img, porém vai valer para todas as imagens, para evitar isso usaremos um identificador no index.html. Utiliza-se #id para chamar a imagem*/
 #imagempositivo {
+    display: inline;
     width: 200px;
     height: 200px;
 }
