--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ header{
     background-color: #ffffff;
 }
 #logo {
-    display: inline;
-}
+   /*display: inline;}*/
 h1 {
     /*pode adicionar cor: escrevendo o nome em inglês, hexadecimal ou RGB*/
     color: #50471e;
