--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 header {
     background-color: blueviolet;
 }
+main{
+    background-color: black;
+}
+footer{
+    background-color: darksalmon;
+}
 #logo{
     padding: center;
 }
