--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-header {
-    background-color: blueviolet;
-}
-main{
-    background-color: black;
-}
-#imagempositivo{
-    display: inline;
-    height: 50px;
-}
-footer{
-    background-color: darksalmon;
-}
-#logo{
-    display: inline-block;
-    padding: center;
+p{
+    text-align:center;
 }
