--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 p {
     text-align:center;
-    border: 10px solid #000000
+    
 }
 h1 {
     color: #888888
@@ -15,4 +15,6 @@ h1 {
 #pergunta {
     font-style: oblique;
     font-size: large;
+    border: 2px solid #000000
+    padding: 10px;
 }
