--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ h1 {
     padding: 50px;
     margin: 100px;
 }
+.itens {
+    font-style: italic;
+    font-size: 20px;
+}
 #pergunta {
     font-style: oblique;
     font-size: large;
