--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 header {
     background-color: #cccccc;
-    padding: 50px;
 }
 main {
     background-color: #ccccff;
@@ -9,7 +8,6 @@ main {
 footer{
     background-color: #ccffcc;
     padding: 50px;
-
 }
 #banner {
     width: 100%;
@@ -35,5 +33,7 @@ h1 {
 }
 #pergunta {
     font-style: oblique;
+    font-style: bold;
     font-size: large;
+
    }
