--- a/style.css
+++ b/style.css
@@ -35,5 +35,9 @@ h1 {
     font-style: oblique;
     font-style: bold;
     font-size: large;
-
-   }
+}
+#especial{
+    font-weight: bolder;
+    color: darkblue;
+    font-style: italic;
+}
