--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ main {
     padding: 50px;
 }
 footer{
-    background-color: #ccffcc;
+    background-color: #cc99cc;
     padding: 50px;
 }
 #banner {
