--- a/style.css
+++ b/style.css
@@ -13,15 +13,13 @@ footer{
     width: 100%;
     padding: 100px;
 }
-    
 p {
     text-align:justify;
     font-size: 20px;
-    
 }
 h1 {
+    display: inline-block;
     text-align: center;
-    
     width: 500px;
     color: #888888;
     border: 2px solid #000000;
