--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ h1,h2,h3{
     height: 10px;
     font-size: 1.5em;
     font-height: bold;
+    padding: 20px;
 }
 h1 {
     display: inline-block;
