--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ h1,h2,h3{
     font-size: 1.5em;
     font-height: bold;
     padding: 20px;
+    /*chamando a fonte impostada do google font*/
+    font-family: 'Rubik Bubbles', cursive;
 }
 h1 {
     display: inline-block;
