--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1 {
     display: inline-block;
     text-align: center;
     width: 500px;
-    color: #888888;
+    color: #4f4723;
     border: 2px solid #000000;
     margin: 10px;
 }
