--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h1,h2,h3{
     font-size: 1.5em;
     font-height: bold;
     padding: 20px;
+    color:#4f4723
     /*chamando a fonte impostada do google font*/
     font-family: 'Rubik Bubbles', cursive;
 
