--- a/style.css
+++ b/style.css
@@ -20,9 +20,7 @@ footer{
 
 #banner {
     width: 100%
-    height: 100px;
-
-}
+   }
 
 nav li {
     display:inline;
@@ -32,9 +30,10 @@ nav li {
 
 p {
     text-align:justify;
-    font-size: 20px;
+    font-size: 1.5em;
     padding: 30px;
     color: #000000;
+    font-style:italic;
 
 }
 
@@ -51,14 +50,7 @@ h1,h2,h3 {
 
 }
 
-h1 {
-    display: inline-block;
-    text-align: center;
-    width: 500px;
-    color: #4f4723;
-    border: 2px solid #000000;
-    margin: 10px;
-}
+
 .itens {
     margin-left:20%;
     height:20px;
